<resources>
    <string name="app_name">Food Wala</string>
    <string name="logo_image">logo_image</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="design_by_dev">Design By\nJoy Mridha</string>
    <string name="start_screen_image">Start_Screen_Image</string>
    <string name="enjoy_restaurant_quality_meals_nat_home">Enjoy Restaurant Quality Meals\nat Home</string>
    <string name="next">Next</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="continue_with">Continue With</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="login">Login</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="to_provide_you_with_the_best_dining_experience_we_need_your_permission_to_access_your_device_s_location_by_enabling_location_services_we_can_offer_personalized_restaurant_recommendations_accurate_delivery_estimates_and_ensure_a_seamless_food_delivery_experience">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="view_menu">View Menu</string>
    <string name="add_to_cart">Add To Cart</string>
</resources>